--- a/theme/assets/css/dev-espasyo.css
+++ b/theme/assets/css/dev-espasyo.css
@@ -163,7 +163,7 @@
   height: auto;
 }
 
-.wrap-titre {
+.wrap-title {
   width: 80%;
   flex-direction: column;
   align-items: flex-start;
@@ -386,11 +386,6 @@
 .footer-link {
   color: #292722;
   padding: 4px 8px;
-  text-decoration: none;
-}
-
-.span-link {
-  color: #292722;
   text-decoration: none;
 }
 
@@ -761,7 +756,7 @@
   z-index: 998;
   background-color: #fff;
   border-top: 1px solid rgba(67, 83, 255, .16);
-  padding: 1.5rem 2rem;
+  padding: 3rem;
   display: none;
   position: fixed;
   top: auto;
@@ -772,7 +767,7 @@
 
 .fs-cc-banner_container {
   width: 100%;
-  max-width: 62.5rem;
+  max-width: 1100px;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
@@ -837,6 +832,7 @@
 .fs-cc-banner_text {
   color: #141414;
   margin-right: 1.5rem;
+  padding-right: 104px;
   font-size: 14px;
   line-height: 22px;
 }
@@ -895,6 +891,10 @@
   .wrap-block-logo {
     display: flex;
   }
+
+  .fs-cc-banner_component {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -941,7 +941,9 @@
   }
 
   .fs-cc-banner_text {
+    margin-bottom: 16px;
     margin-right: 0;
+    padding-right: 0;
   }
 }
 
@@ -951,7 +953,7 @@
     padding-right: 32px;
   }
 
-  .wrap-titre {
+  .wrap-title {
     width: 90%;
   }
 
