--- a/theme/assets/css/dev-espasyo.css
+++ b/theme/assets/css/dev-espasyo.css
@@ -857,6 +857,19 @@
   width: 100%;
 }
 
+.overlay {
+  z-index: 9999;
+  background-color: #fff;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: fixed;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
 @media screen and (min-width: 1440px) {
   .container {
     width: 100%;
